--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,8 +8,15 @@
 @import '../components/MenuManagement.module.css';
 @import '../components/feedbacks.module.css';
 @import '../components/contactus.module.css';
-body {
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
+body, html {
   font-family: 'Roboto', sans-serif;
-  font-weight: 100;
+  font-weight: 400;
   background-color: #f9fafb;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
 }
